[update] update contents

--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@
                   </a>
                 </span>
 
+                <!-- Hardware -->
+                <span class="link-block">
+                  <a href="https://docs.google.com/document/d/1fpZRiGoxWqLoFs-zxnG4d_d3hy0eHjlLA4nsuEKvCEg/edit?usp=sharing"
+                    target="_blank" class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-wrench"></i>
+                    </span>
+                    <span>Hardware</span>
+                  </a>
+                </span>
+
               </div>
             </div>
 
@@ -254,28 +265,31 @@
         <div class="columns is-vcentered">
 
           <div class="column is-size-6">
-            <img src="static\images\ws-marker_track.svg" alt="Sensor" style="max-height: 400px;">
-            <img src="static\images\ws-marker_kf.png" alt="Sensor" style="max-height: 400px;">
+            <img src="static\images\ws-marker_track.svg" alt="Sensor" style="max-height: 300px;">
+            <img src="static\images\ws-marker_kf.png" alt="Sensor" style="max-height: 300px;">
           </div>
 
           <div class="column is-6">
-            <h4 class="title is-4" style="margin-bottom: 1rem;">Why it works?</h4>
+            <h4 class="title is-4" style="margin-bottom: 1rem;">Secret Recipes for<br />Efficient and Robust Marker
+              Tracking
+            </h4>
             <table>
               <tr>
                 <td width="40" valign="top">(i)</td>
-                <td>A fully transparent elastomer that enables clear visual perception.</td>
+                <td>A <strong>fully transparent elastomer</strong> that enables clear visual perception.</td>
               </tr>
               <tr>
                 <td width="40" valign="top">(ii)</td>
-                <td>Persistent illumination that eliminates mode switching.</td>
+                <td><strong>Persistent illumination</strong> that eliminates mode switching.</td>
               </tr>
               <tr>
                 <td width="40" valign="top">(iii)</td>
-                <td>Novel keyline markers that maintain visibility against any background.</td>
+                <td>Novel <strong>keyline markers</strong> that maintain visibility against any background.</td>
               </tr>
               <tr>
                 <td width="40" valign="top">(iv)</td>
-                <td>An efficient tracking algorithm processing marker deviations at 6.08 ms per frame.</td>
+                <td>An <strong>efficient tracking algorithm</strong> processing marker deviations at 6.08 ms per frame.
+                </td>
               </tr>
             </table>
 
@@ -290,49 +304,39 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
 
-        <div class="column is-full-width has-text-centered mb-5">
-          <h2 class="title is-3">TacThru and TacThru-UMI</h2>
-        </div>
-
         <div class="columns is-vcentered">
+
+          <div class="column is-7">
+            <h4 class="title is-4" style="margin-bottom: 1rem; text-align: right;">Fabrication Details of<br />TacThru /
+              TacThru-UMI
+            </h4>
+            <table>
+              <tr>
+                <td>
+                  <strong>(a) Keyling marker fabrication:</strong> The keyline marker elastomer is fabricated by
+                  sequentially spraying inner
+                  (black) and outer (white) markers on transparent elastomer using laser-cut masks.
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>(b) Sensor design:</strong> The elastomer is installed on a VBTS sensor body, which includes
+                  the LEDs for illumination, camera module for image capturing, and the elastomer installed at the top.
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>(c) Integration on TacThru-UMI:</strong> The TacThru-UMI platform includes a robot
+                  end-effector (left) and a data collector (right) that share identical body and finger designs.
+                </td>
+              </tr>
+            </table>
+          </div>
 
           <div class="column is-5">
             <img src="static\images\hardware.svg" alt="Hardware" style="max-height: 400px;">
           </div>
 
-          <div class="column is-7">
-            <table>
-              <tr>
-                <td valign="top" width="40">(a)</td>
-                <td>
-                  The keyline marker elastomer is fabricated by sequentially spraying inner
-                  (black) and outer (white) markers on transparent elastomer using laser-cut masks.
-                </td>
-              </tr>
-              <tr>
-                <td valign="top" width="40">(b)</td>
-                <td>
-                  The TacThru sensor features an extended linkage that serves as gripper fingers.
-                </td>
-              </tr>
-              <tr>
-                <td valign="top" width="40">(c)</td>
-                <td>
-                  The TacThru-UMI platform includes a robot end-effector (left) and a data collector
-                  (right) that share identical body and finger designs.
-                </td>
-              </tr>
-            </table>
-            <p>
-              <span class="link-block">
-                <br><a
-                  href="https://docs.google.com/document/d/1fpZRiGoxWqLoFs-zxnG4d_d3hy0eHjlLA4nsuEKvCEg/edit?usp=sharing"
-                  target="_blank" class="external-link button is-normal is-rounded is-dark">
-                  🛠️ Hardware Guide
-                </a>
-              </span>
-            </p>
-          </div>
         </div>
       </div>
     </div>
