[fix] fixed asset names

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           </div>
 
           <div class="column is-5">
-            <img src="static\images\hardware.svg" alt="Hardware" style="max-height: 400px;">
+            <img src="static\images\tacthru_umi.svg" alt="Hardware" style="max-height: 400px;">
           </div>
 
         </div>
@@ -353,7 +353,7 @@
         <div class="columns is-centered is-multiline">
 
           <div class="column is-full has-text-centered">
-            <img src="static/images/Tasks.svg" alt="Tasks" style="width: 100%; max-width: 900px;">
+            <img src="static/images/tasks.svg" alt="Tasks" style="width: 100%; max-width: 900px;">
           </div>
         </div>
       </div>
@@ -638,7 +638,7 @@
           </div>
 
           <div class="column is-7 has-text-centered">
-            <img src="static/images/Results.svg" alt="Results" style="width: 100%; max-width: 900px;">
+            <img src="static/images/results.svg" alt="Results" style="width: 100%; max-width: 900px;">
           </div>
 
           <div class="column is-5">
