--- a/index.html
+++ b/index.html
@@ -370,9 +370,10 @@
       </div> -->
 
       <div
-        style="display: flex; align-items: center; justify-content: center; font-size: 0.85rem; color: #666; margin-bottom: 0.25rem;">
+        style="display: flex; align-items: center; justify-content: center; font-size: 0.85rem; margin-bottom: 0.25rem;">
+
         <span>
-          ⓘ Use
+          <strong>ⓘ Use</strong>
         </span>
 
         <!-- fake button demo (not clickable) -->
@@ -382,7 +383,6 @@
             <i class="fas fa-chevron-left"></i>
           </span>
         </button>
-        /
         <button class="button is-light is-rounded is-small"
           style="margin: 0 0.3rem; pointer-events: none; opacity: 0.8;">
           <span class="icon">
@@ -391,7 +391,7 @@
         </button>
 
         <span>
-          to browse different rollouts for the tasks.
+          <strong>to browse different rollouts for the tasks. All videos are in 4x speed.</strong>
         </span>
       </div>
       <div style="height: 1.5rem;"></div>
