--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <div class="columns is-centered is-multiline">
 
           <div class="column is-full has-text-centered">
-            <img src="static/images/tasks.svg" alt="Tasks" style="width: 100%; max-width: 900px;">
+            <img src="static/images/task_settings.svg" alt="Tasks" style="width: 100%; max-width: 900px;">
           </div>
         </div>
       </div>
@@ -638,7 +638,7 @@
           </div>
 
           <div class="column is-7 has-text-centered">
-            <img src="static/images/results.svg" alt="Results" style="width: 100%; max-width: 900px;">
+            <img src="static/images/manip_results.svg" alt="Results" style="width: 100%; max-width: 900px;">
           </div>
 
           <div class="column is-5">
