[add] added bibtex

--- a/index.html
+++ b/index.html
@@ -681,13 +681,17 @@
     </div>
   </section>
 
-  <!-- <section class="section" id="BibTeX">
+  <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@article{
+      <pre><code>@misc{li2025simultaneous,
+    title={Simultaneous Tactile-Visual Perception for Learning Multimodal Robot Manipulation},
+    author={Yuyang Li and Yinghan Chen and Zihang Zhao and Puhao Li and Tengyu Liu and Siyuan Huang and Yixin Zhu},
+    journal={arXiv preprint arXiv:2512.09851},
+    year={2025},
 }</code></pre>
     </div>
-  </section> -->
+  </section>
 
 
   <footer class="footer">
