[update] updated links

--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@
                   </a>
                 </span>
 
+                <span class="link-block">
+                  <a href="https://vimeo.com/1145307821" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-file-video"></i>
+                    </span>
+                    <span>Video</span>
+                  </a>
+                </span>
+
                 <!-- Code -->
                 <span class="link-block">
                   <a href="https://github.com/YuyangLee/TacThru" target="_blank"
@@ -684,11 +694,11 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{li2025simultaneous,
-    title={Simultaneous Tactile-Visual Perception for Learning Multimodal Robot Manipulation},
-    author={Yuyang Li and Yinghan Chen and Zihang Zhao and Puhao Li and Tengyu Liu and Siyuan Huang and Yixin Zhu},
-    journal={arXiv preprint arXiv:2512.09851},
-    year={2025},
+      <pre><code>@article{li2025simultaneous,
+  title={Simultaneous Tactile-Visual Perception for Learning Multimodal Robot Manipulation},
+  author={Yuyang Li and Yinghan Chen and Zihang Zhao and Puhao Li and Tengyu Liu and Siyuan Huang and Yixin Zhu},
+  journal={arXiv preprint arXiv:2512.09851},
+  year={2025},
 }</code></pre>
     </div>
   </section>
