[fix] fixed error in taccel paper

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             Related Research
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="https://https://taccel-simulator.github.io/" target="_blank">
+            <a class="navbar-item" href="https://taccel-simulator.github.io/" target="_blank">
               [NeurIPS 2025] Taccel: High-performance GPU simulator for vision-based tactile robotics
             </a>
             <a class="navbar-item" href="https://www.nature.com/articles/s42256-025-01053-3" target="_blank">
